--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="javascript.html">JavaScript</a></li>
         </ul>
     </div>
-    <div>
+    <div class="sobre">
         <h1>Sobre esta pagina</h1>
         <p>Esta pagina nada mais eh do que o resultado de estudo, pesquisa
             e experimentos com HTML, CSS e JavaScript</p>
