--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="shortcut icon" href="img/hehehe.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 </head>
-
-<body>
+<header>
     <div class="menu">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -20,10 +19,28 @@
             <li><a href="javascript.html">JavaScript</a></li>
         </ul>
     </div>
+</header>
+
+<body>
+
+    <h1>Sobre esta pagina</h1>
     <div class="sobre">
-        <h1>Sobre esta pagina</h1>
-        <p>Esta pagina nada mais eh do que o resultado de estudo, pesquisa
+
+        <p class="p1">Esta pagina nada mais eh do que o resultado de estudo, pesquisa
             e experimentos com HTML, CSS e JavaScript</p>
+        <p class="p2">Nesta pagina estou testando o GRID layout. Do lado
+            esquerdo temos um paragrafo descrevendo o conteudo do site, Ja
+            neste lado temos um paragrafo do lado do outro</p>
+        <P class="p3">Ja este paragrafo deve ficar no abaixo dos dois primeiros mas ocupar
+            todo o espaco
+        </P>
+        <p class="p4">Ja este 4 paragrafo deve ficar a direita, pulando o
+            espaco da esquerda
+        </p>
+    
+    </div>
+    <div class="abaixo">
+        <p>*Esta caixa preta eh uma div*</p>
     </div>
 </body>
 
