--- a/listas.html
+++ b/listas.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-
-<body>
+<header>
     <div class="menu">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -19,7 +18,8 @@
             <li><a href="javascript.html">JavaScript</a></li>
         </ul>
     </div>
-
+</header>
+<body>
     <div>
         <h2>Listas</h2>
         <h3>Listas desordenadas (ul)</h3>
