--- a/javascript.html
+++ b/javascript.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-<body>
+<header>
     <div class="menu">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -17,5 +17,8 @@
             <li><a href="javascript.html">JavaScript</a></li>
         </ul>
     </div>
+</header>
+<body>
+    
 </body>
 </html>
