--- a/links.html
+++ b/links.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
-<body>
+<header>
     <div class="menu">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -17,6 +18,10 @@
             <li><a href="javascript.html">JavaScript</a></li>
         </ul>
     </div>
-    
+</header>
+
+<body>
+
 </body>
+
 </html>
