--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <title>Pedro's html site</title>
     <link rel="shortcut icon" href="img/hehehe.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
+    
 </head>
 <header>
     <div class="menu">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="tabelas.html">Tabelas</a></li>
-            <li><a href="listas.html">Listas</a></li>
-            <li><a href="links.html">Links de pesquisa</a></li>
-            <li><a href="javascript.html">JavaScript</a></li>
+            <li class="item item1"><a href="index.html">Home</a></li>
+            <li class="item item2"><a href="tabelas.html">Tabelas</a></li>
+            <li class="item item3"><a href="listas.html">Listas</a></li>
+            <li class="item item4"><a href="links.html">Links de pesquisa</a></li>
+            <li class="item item5"><a href="javascript.html">JavaScript</a></li>
         </ul>
     </div>
 </header>
